--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-dash
-dash_core_components
-dash_html_components
-dash_bootstrap_components
-pandas
-plotly
+beautifulsoup4==4.9.1
+dash==1.16.3
+dash_bootstrap_components==0.11.0
+dash_core_components==1.12.1
+dash_html_components==1.1.1
 gunicorn
-requests
-bs4
-pandas
-regex
+pandas==1.0.5
+plotly==4.11.0
+regex==2020.6.8
+requests==2.24.0
